# projet_retranscription_yt

./: .gitignore  2026-04-15-claude-code-de-debutant-a-pro-en-4h30-2026.md  2026-04-15-croissance-mondiale-france-immobilier-plus-dure-sera-la-chute.md  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.md  pyproject.toml
openspec/changes/archive/2026-04-14-cli-input-url/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-cli-input-url/specs/cli-entrypoint/: spec.md
openspec/changes/archive/2026-04-15-analyse-claude-points-cles/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-analyse-claude-points-cles/specs/claude-analysis/: spec.md
openspec/changes/archive/2026-04-15-analyse-claude-points-cles/specs/cli-entrypoint/: spec.md
openspec/changes/archive/2026-04-15-push-github-automatique/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-push-github-automatique/specs/github-push/: spec.md
openspec/changes/archive/2026-04-15-recuperation-sous-titres-yt/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-recuperation-sous-titres-yt/specs/youtube-transcript/: spec.md
openspec/changes/archive/2026-04-15-timecodes-cliquables-markdown/: design.md  proposal.md  tasks.md
openspec/specs/claude-analysis/: spec.md
openspec/specs/cli-entrypoint/: spec.md
openspec/specs/github-push/: spec.md
openspec/specs/markdown-generation/: spec.md
openspec/specs/youtube-transcript/: spec.md
src/yt_rapport/: claude.py  github.py  main.py  markdown.py  transcript.py
(+1 files in other folders)
